--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -2011,16 +2011,16 @@ footer > ul li a:hover {
   #main.project .infos .share ul li:not(:first-child) a {
     position: absolute;
     left: calc(100% - 1rem);
+    letter-spacing: .1rem;
     transition: all 0.25s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    visibility: hidden;
-  }
-  #main.project .infos .share ul li:not(:first-child) a:first-letter {
-    visibility: visible;
   }
 }
 #main.project .infos .share ul li:not(:first-child):hover a {
   visibility: visible;
   left: 0;
+}
+#main.project .infos .share ul li:nth-child(3) a {
+  letter-spacing: .08rem;
 }
 #main.project .infos .share ul li:nth-child(3) a {
   left: calc(100% - 2.4rem);
